--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,6 @@ header nav ul li:last-of-type a{
     box-sizing: border-box;
     min-height: 500px;
 }
-
 .logotip_container {
     margin: auto;
     max-width: 1168px;
@@ -364,6 +363,42 @@ header nav ul li:last-of-type a{
     text-align: center;
     color: black;
     margin-bottom: 82px;
+}
+            /*Maps*/
+.maps {
+background: lightgray;
+padding-top: 60px;
+padding-bottom: 40px;
+box-sizing: border-box;
+min-height: 500px;
+}
+.maps_container {
+    margin: auto;
+    max-width: 1168px;
+    font-family: 'Poppins', sans-serif;
+}
+.maps_container h3{
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 42px;
+    text-align: center;
+    color: black;
+    margin-bottom: 15px;
+}
+.maps_container h4 {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+    color: black;
+    margin-bottom: 40px;
+}
+.past_iframe {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
 }
             /*Footer*/
 .footer {
